macro(PARENTDIR result dir)
string(FIND ${dir} "/" index REVERSE)
string(SUBSTRING ${dir} 0 ${index} PATH)
set(${result} ${PATH})
endmacro()

add_executable(main main.cpp)
target_link_libraries(main PUBLIC ${LIBRARY_TARGETS})
target_include_directories(main PUBLIC ${PROJECT_INCLUDE_DIR} ${LIBRARY_INCLUDE_DIRS})

set(runtime_path)
foreach(lib_dir ${STATIC_LIBRARIES} ${SHARED_LIBRARIES})
    PARENTDIR(parent ${lib_dir})
    message("${parent}")
    list(APPEND runtime_path "-Wl,--copy-dt-needed-entries,-R${parent}")
endforeach() 
target_link_options(main PUBLIC ${runtime_path})
message("runtime:${runtime_path}")